--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -794,7 +794,6 @@ td.browsebar a:link {
 }
 
 td.browsebar a:visited {
-	font-family: verdana, Arial, sans-serif;
 	color: #000000;
 	font-size: 11px;
 	text-decoration: none;
@@ -802,7 +801,6 @@ td.browsebar a:visited {
 }
 
 td.browsebar a:active {
-	font-family: verdana, Arial, sans-serif;
 	color: #000000;
 	font-size: 11px;
 	text-decoration: none;
@@ -810,7 +808,6 @@ td.browsebar a:active {
 }
 
 td.browsebar a:hover {
-	font-family: verdana, Arial, sans-serif;
 	color: #666699;
 	font-size: 11px;
 	text-decoration: none;
@@ -823,7 +820,6 @@ td.browsebar a:hover {
 
 .selectNS {
 	background-color: #FFFFFF;
-	font-family: Verdana, "Arial", sans-serif;
 	font-size: 10px;
 	color: #000000;
 }
@@ -901,7 +897,6 @@ td.browsebar a:hover {
 	bottom: 6px;
 	text-align: right;
 	color: #999999;
-	font-family: Verdana, Arial, sans-serif;
 	font-size: 10px
 }
 
@@ -1957,13 +1952,7 @@ td.browsebar a:hover {
 }
 
 /*- [ portlet ] --------------------------- */
-#portletPages div.portlet-header { /*float: left;
-  height: 2em; 
-  line-height: 2;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color:#B3BFD1;*/
+#portletPages div.portlet-header { 
 	float: left;
 	height: 2em;
 	line-height: 2;
@@ -1981,14 +1970,10 @@ td.browsebar a:hover {
 	padding-left: 10px;
 }
 
-#portletPages h2.portlet-title { /*float: left;
-  margin:  0;
-  font-size: 10px;
-  font-weight: bold;*/
+#portletPages h2.portlet-title { 
 	float: left;
 	margin: 0;
 	margin-left: 4px;
-	font-family: Verdana, Arial, sans-serif;
 	font-variant: small-caps;
 	color: #5889BB;
 	font-size: 12px;
@@ -2027,7 +2012,6 @@ td.browsebar a:hover {
 	border-top: none;
 	color: #000;
 	cursor: default;
-	font-family: Verdana, Arial, sans-serif;
 	font-size: 10px;
 }
 
@@ -3309,3 +3293,74 @@ ul#attachmentList li.attachmentListItem .lineMain {
 	margin: 10px;
 	text-align: center;
 }
+
+/*- [ comment BEGIN ] ------------------------- */
+.commentaires {
+	width:550px;
+}
+
+.commentaires hr{
+	clear:both;
+	margin-bottom:20px;
+	background-color:#CECECE;
+	border:0;
+	height:1px;
+	color:#CECECE;
+
+}
+.oneComment {
+	width:525px;
+	position:relative;
+	clear:both;
+	background:transparent url(../icons/commentBottom.png) bottom left no-repeat;
+	margin-bottom:10px;
+}
+.oneComment div {
+	background:transparent url(../icons/commentTop.png) left top no-repeat;
+	}
+.oneComment div div { background-image:none;}
+
+.oneComment div.avatar { 
+	position:absolute;
+	top:0;
+	left:0;
+	border:1px solid #CECECE;
+	padding:1px;
+	background-color:#FFF;
+	}
+.oneComment div.avatar img {
+	width:50px;}	
+
+.oneComment .action {
+	bottom: 10px;
+    position: absolute;
+    right: 9px;
+}
+.oneComment .action img {
+	width:13px;
+}
+
+.oneComment p.author {
+	color: #333333;
+    font-size: 12px;
+    padding: 6px 64px;
+	margin:0;
+	}
+.oneComment .date {
+	color:#999;
+	font-size:11px;
+}
+
+.oneComment p.message {
+	font-size: 11px;
+    line-height: 16px;
+    padding:27px 12px 23px 23px;
+    text-align: justify;
+    text-indent: 41px;
+	margin:0;
+	}
+
+
+
+
+/*- [ comment END ] ------------------------- */
