update feature #407, #408, #409, #410 Merge statistics features from core-5.2-SPEC-1-SNAPSHOT branche
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3162 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3364,3 +3364,29 @@ ul#attachmentList li.attachmentListItem .lineMain {
 
 
 /*- [ comment END ] ------------------------- */
+
+/*- [ statictics BEGIN ] -------------------- */
+#stats_viewConnectionButton {
+	margin-top: 10px;
+}
+
+/*- [Specific export BEGIN ] ---------------- */
+div.exportlinks {
+  background-color: #eee;
+  border: 1px dotted #999;
+  padding: 8px 4px 2px 4px;
+  margin: 2px auto 10px auto;
+  width: 79%;
+}
+
+span.export {
+  padding: 0 4px 1px 20px;
+  display: inline;
+  display: inline-block;
+  cursor: pointer;
+}
+
+span.csv {
+  background-image: url(../icons/fileType/ico_file_csv.png);
+  background-repeat:no-repeat;
+}
