fixing bug #1443 In case of anonymous user, connection settings are no longer saved.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3222 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3390,3 +3390,28 @@ span.csv {
   background-image: url(../icons/fileType/ico_file_csv.png);
   background-repeat:no-repeat;
 }
+
+/*- [Generic inline messages BEGIN ] ---------------- */
+.inlineMessage,
+.inlineMessage-ok,
+.inlineMessage-nok {
+	padding: 5px;
+	margin: 10px;
+	text-align: center;
+	border: 2px solid; 
+}
+
+.inlineMessage {
+	background-color: #FBF7AA;
+	border-color: #F9E98E;
+}
+
+.inlineMessage-ok {
+	background-color: #B5DF7D;
+	border-color: #9BD94A;
+}
+
+.inlineMessage-nok {
+	background-color: #F79992;
+	border-color: #CE6F6F;
+}
